@@ -40,16 +40,3 @@ bundler {
 tasks.shadowJar {
     minimize()
 }
-
-dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.11.4"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testImplementation(libs.paper.api)
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-}
-
-tasks.test {
-    useJUnitPlatform()
-    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
-    testLogging.showStandardStreams = true
-}
